fixtures/typescript/tests/baselines/reference/libBaseline.errors.txt
libBaseline.ts(36,29): error TS2339: Property 'caller' does not exist on type '() => void'.
libBaseline.ts(37,12): error TS2339: Property 'substr' does not exist on type '"baseline"'.
libBaseline.ts(38,24): error TS2339: Property 'compile' does not exist on type 'RegExp'.
libBaseline.ts(39,47): error TS2339: Property 'callee' does not exist on type 'IArguments'.


==== libBaseline.ts (4 errors) ====
    Intl.supportedValuesOf("currency");
    new Intl.NumberFormat().formatRange(1, 2);
    
    [1, 2, 3].at(0);
    [1, 2, 3].toReversed();
    "baseline".at(0);
    
    Object.hasOwn({ baseline: true }, "baseline");
    new Error("problem", { cause: new Error("root") });
    /baseline/d.hasIndices;
    
    type __BaselineLegacyRegExpStatic =
        | "$1"
        | "$2"
        | "$3"
        | "$4"
        | "$5"
        | "$6"
        | "$7"
        | "$8"
        | "$9"
        | "input"
        | "$_"
        | "lastMatch"
        | "$&"
        | "lastParen"
        | "$+"
        | "leftContext"
        | "$`"
        | "rightContext"
        | "$'";
    type __BaselineAssertNever<T extends never> = T;
    type __BaselineHasNoLegacyRegExpStatics = __BaselineAssertNever<
        Extract<__BaselineLegacyRegExpStatic, keyof typeof RegExp>
    >;
    (function probeCaller() {}).caller; // Error
                                ~~~~~~
!!! error TS2339: Property 'caller' does not exist on type '() => void'.
    "baseline".substr(1); // Error
               ~~~~~~
!!! error TS2339: Property 'substr' does not exist on type '"baseline"'.
    new RegExp("baseline").compile("baseline"); // Error
                           ~~~~~~~
!!! error TS2339: Property 'compile' does not exist on type 'RegExp'.
    (function probeArguments() { return arguments.callee; })(); // Error
                                                  ~~~~~~
!!! error TS2339: Property 'callee' does not exist on type 'IArguments'.
    